<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/solution_tv"
        android:textSize="32dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:layout_above="@id/result_tv"
        android:layout_margin="16dp">

    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_tv"
        tools:text="0"
        android:textSize="64dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:layout_above="@id/buttons_layout"
        android:layout_margin="16dp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:paddingVertical="16dp"
        android:background="#E8F5E9"
        android:id="@+id/buttons_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_ac"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#3F3C3C"
                android:text="@string/full_delete"
                android:textColor="@color/white"
                android:textSize="21dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_open_bracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#3F3C3C"
                android:text="@string/open_bracket"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_close_bracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#3F3C3C"
                android:text="@string/close_bracket"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_c"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#3F3C3C"
                android:text="@string/one_back"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_dot"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equalto"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />



        </LinearLayout>

    </LinearLayout>


</RelativeLayout>